# camgrab

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  README_CN.md  deny.toml
.github/workflows/: ci.yml  release.yml
Formula/: camgrab.rb
crates/camgrab-cli/: Cargo.toml
crates/camgrab-cli/src/: main.rs
crates/camgrab-cli/src/commands/: add.rs  clip.rs  discover.rs  doctor.rs  list.rs  mod.rs  ptz.rs  snap.rs  watch.rs
crates/camgrab-core/: Cargo.toml
crates/camgrab-core/src/: camera.rs  error.rs  lib.rs
crates/camgrab-core/src/config/: migration.rs  mod.rs
crates/camgrab-core/src/motion/: detector.rs  filters.rs  mod.rs  zones.rs
crates/camgrab-core/src/notify/: mod.rs
crates/camgrab-core/src/onvif/: device.rs  discovery.rs  mod.rs  ptz.rs
crates/camgrab-core/src/rtsp/: README.md  client.rs  codec.rs  mod.rs  transport.rs
crates/camgrab-core/src/storage/: mod.rs
crates/camgrab-daemon/: Cargo.toml
crates/camgrab-daemon/src/: lib.rs  scheduler.rs  server.rs
examples/: rtsp_clip.rs  rtsp_snapshot.rs
