[package]
name = "camgrab-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI interface for camgrab - capture, record, and monitor RTSP/ONVIF cameras"
readme = "../../README.md"

[[bin]]
name = "camgrab"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
camgrab-core = { path = "../camgrab-core", version = "1.0.0" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }
dirs = { workspace = true }
is-terminal = { workspace = true }
uuid = { workspace = true }
image = { workspace = true }
